set up for day 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,12 @@ include_directories(include)
 add_executable(AoC main.cpp)
 
 # Add the daily directories
-add_subdirectory(day1)
+#add_subdirectory(day1)
+add_subdirectory(day2)
 
 # Link the daily libraries to the main executable
-target_link_libraries(AoC PRIVATE day1)
-
+#target_link_libraries(AoC PRIVATE day1)
+target_link_libraries(AoC PRIVATE day2)
 
 # Add the functions.cpp file to the build process
 add_library(functions functions.cpp)
